[package]
name = "rusty-pixel"
version = "0.1.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
aws-config = "1.8.15"
aws-sdk-s3 = "1.127.0"
axum = { version = "0.8.8", features = ["macros", "multipart"] }
http-body-util = "0.1.3"
libvips = { git = "https://github.com/zanmato/libvips-rust-bindings" }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
rayon = "1.11.0"
regex = "1.12.3"
reqwest = { version = "0.12", features = ["multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "signal"] }
toml = "0.8.22"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = [
  "trace",
  "catch-panic",
  "timeout",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
uuid = { version = "1.23.0", features = ["v4"] }

[build-dependencies]
cargo-chef = "0.1.77"
